--- a/CSS/mainCss.css
+++ b/CSS/mainCss.css
@@ -1,6 +1,6 @@
 html {min-height: 100%}
 body {
-	background-image: linear-gradient(180deg, #1e0641 5%, #a161ff 100%); 
+	background-image: linear-gradient(180deg, black 0%, #1e0641 30%, #a161ff 100%); 
 	background-repeat: no-repeat;
 	margin: 0;
 	min-width: 600px;
