--- a/CSS/portfolioCss.css
+++ b/CSS/portfolioCss.css
@@ -14,7 +14,14 @@
 	background: white;
 	height: 300px;
 	width: 300px;
+	overflow: hidden;
 } 
+.imgBox img{
+	width: 300px;
+	border-radius: 10px;
+	flex-wrap: flex;
+	justify-content: center;
+}
 .picContainer1 { 
 	padding: 10px;
 	display: flex;
