--- a/CSS/aboutMeCss2.css
+++ b/CSS/aboutMeCss2.css
@@ -1,2 +1,64 @@
 /* CSS file for the About me page */
-
+.bgColor1 {
+	background-color: #7f000b;
+}
+.bgColorBody {
+	background: #eeeeee;
+}
+.body1 {
+	font-family: Arial;
+	color: white;
+	font-size: 16px;
+}
+.body1 p {
+	line-height: 1.25;
+	margin-right: 30px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+.bottomBox {
+	background: #270000;
+	font-family: Arial;
+}
+.bottomBox p {
+	color: white;
+	margin-bottom: 0px;
+	font-weight: bold;
+}
+.header1 {
+	font-family: Atomic;
+	font-size: 4.25rem;
+	color: white;
+}
+.leftBox1 {
+	margin-bottom: 40px;
+}
+.logOutButton p {
+	color: white;
+	margin-bottom: 0px;
+	font-family: Arial;
+	font-size: 15px;
+}
+.tagBox {
+	display: inline-flex;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+}
+.tagContent {
+	background: transparent;
+	border: 1px solid white;
+	color: white;
+	border-radius: 5px;
+	margin-right: 4.5px;
+	margin-bottom: 4px;
+	padding-left: 3px;
+	padding-right: 3px;
+}
+.tagContent p {
+	margin-bottom: 0px;
+	font-size: 13px;
+	font-style: italic;
+	font-family: Arial;
+	padding: 5px;
+}
