--- a/CSS/aboutMeCss.css
+++ b/CSS/aboutMeCss.css
@@ -1,64 +1,46 @@
-/* CSS file for the About me page */
-.bgColor1 {
-	background-color: #7f000b;
-}
-.bgColorBody {
-	background: #eeeeee;
-}
-.body1 {
+.content1 {
 	font-family: Arial;
+	font-size: 15px;
 	color: white;
-	font-size: 16px;
 }
-.body1 p {
-	line-height: 1.25;
-	margin-right: 30px;
-	margin-top: 0px;
-	margin-bottom: 0px;
+.customBG1 {
+	background: black;
 }
-.bottomBox {
-	background: #270000;
+.customBG2 {
+	background: #750DFF;
+}
+.customButton button {
 	font-family: Arial;
-}
-.bottomBox p {
-	color: white;
-	margin-bottom: 0px;
+	background: white;
+	color: #750DFF;
 	font-weight: bold;
 }
-.header1 {
-	font-family: Atomic;
-	font-size: 4.25rem;
-	color: white;
+.customButton button:hover {
+	background: #750DFF;
+	color: white;	
+	font-weight: bold;
 }
-.leftBox1 {
-	margin-bottom: 40px;
+.floatingCard {
+	background: #bbb;
 }
-.logOutButton p {
-	color: white;
-	margin-bottom: 0px;
+.imgCard {
+	border-radius: 5px;
+	transition: 0.3s;
+}
+.pageContent p {
 	font-family: Arial;
 	font-size: 15px;
 }
-.tagBox {
-	display: inline-flex;
-	align-items: flex-start;
-	flex-wrap: wrap;
-	justify-content: flex-start;
+.pageTitle p {
+	font-family: Atomic;
+	font-size: 70px;
+	color: black;
 }
-.tagContent {
-	background: transparent;
-	border: 1px solid white;
+.textColored {
+	color: #750DFF;
+}
+.title1 {
+	font-family: Atomic;
+	font-size: 50px;
 	color: white;
-	border-radius: 5px;
-	margin-right: 4.5px;
-	margin-bottom: 4px;
-	padding-left: 3px;
-	padding-right: 3px;
-}
-.tagContent p {
-	margin-bottom: 0px;
-	font-size: 13px;
-	font-style: italic;
-	font-family: Arial;
-	padding: 5px;
 }
